--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "iles-app",
   "version": "0.0.0",
   "scripts": {
-    "dev": "iles dev --open",
+    "dev": "iles dev",
     "build": "iles build",
-    "preview": "iles preview --open --port 5050",
-    "now": "npm run build && npm run preview",
-    "test": "iles test",
+    "preview": "iles preview",
+    "now": "iles build && iles preview",
     "typecheck": "vue-tsc --noEmit"
   },
   "engines": {
@@ -16,7 +15,6 @@
     "@sveltejs/vite-plugin-svelte": "^2.0.4",
     "iles": "^0.9.5",
     "typescript": "^5.0",
-    "vitest": "^0.30",
     "vue-tsc": "^1.2"
   },
   "dependencies": {
