--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.4",
+    "autoprefixer": "^10.4.16",
     "iles": "^0.9.5",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.0",
     "vue-tsc": "^1.2"
   },
